styles adicionados e algumas mudanças no HTML.

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
   <footer>
     <span>
     </span>
-    <span>
-      <a href=""><img src="assets/twitch.svg" alt="icon-twitch"></a>
+    <span id="card-icons">
+      <a href="" class="icons" ><img src="assets/twitch.svg" alt="icon-twitch"></a>
     </span>
     <span>
-      <a href=""><img src="assets/instagram.svg" alt="icon-instagram"></a>
+      <a href="" class="icons" ><img src="assets/instagram.svg" alt="icon-instagram"></a>
     </span>
     <span>
-      <a href=""><img src="assets/linkedin.svg" alt="icon-likedin"></a>
+      <a href="" class="icons" ><img src="assets/linkedin.svg" alt="icon-likedin"></a>
     </span>
     <span>
-      <a href=""><img src="assets/github.svg" alt="icon-github"></a>
+      <a href="" class="icons" ><img src="assets/github.svg" alt="icon-github"></a>
     </span>
   </footer>
 </body>
